Calculate Mac window title bar height dynamically.

This fixes the window button position for MD refresh.

Bug: 841348
Change-Id: Ib313a773a6a220cb8e3e39c944325e4a105ec7ad
Reviewed-on: https://chromium-review.googlesource.com/1081053
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564791}
Former-commit-id: 6b3c8c76f9eb311a4474d427bb2b0f81f402034c